--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,4 +1,28 @@
 /*------------------------*/
+/*------ HEADER ------*/
+/*------------------------*/
+#header {
+    background-color: #fff;
+}
+#header .container {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+.button-mobile {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+.menu {
+    display: none;
+}
+
+
+/*------------------------*/
 /*------ ATTIBUTION ------*/
 /*------------------------*/
 .attribution {
