build(css/*): new folder structure for css files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,8 @@
+/* ----- CSS RESET 
+----------------------------*/
 @import url('./general.css');
-@import url('./mobile.css');
+
+/* ----- PAGE 
+----------------------------*/
+@import url('./page/header.css');
+@import url('./page/home.css');
