feat(style.css): styling of cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,4 @@
 ----------------------------*/
 @import url('./page/header.css');
 @import url('./page/home.css');
+@import url('./page/cards.css');
