--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,4 @@
 @import url('./page/header.css');
 @import url('./page/home.css');
 @import url('./page/cards.css');
+@import url('./page/box.css');
