feat(style.css): import of footer.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,4 @@
 @import url('./page/home.css');
 @import url('./page/cards.css');
 @import url('./page/box.css');
+@import url('./page/footer.css');
