--- a/assets/css/page/footer.css
+++ b/assets/css/page/footer.css
@@ -37,6 +37,7 @@
     #footer .container {
         max-width: 1200px;
         margin: 0 auto;
+        text-align: left;
     }
     .footer-header {
         display: flex;
