--- a/assets/css/page/box.css
+++ b/assets/css/page/box.css
@@ -1,6 +1,7 @@
 #box {
     padding: 40px 20px;
     text-align: center;
+    margin-bottom: 40px;
 }
 #box .container {
     background-color: hsl(256, 26%, 20%);
@@ -17,22 +18,32 @@
     font-weight: 400;
 }
 #box .box-button {
-    padding: 10px;
+    padding: 15px 25px;
     color: white;
     background: transparent;
     border: 2px solid white;
     cursor: pointer;
     text-transform: uppercase;
+    font-weight: 700;
+}
+#box .box-button:hover {
+    color: hsl(256, 26%, 20%);
+    background: white;
 }
 @media (min-width: 768px) {
     #box .container {
         max-width: 1200px;
         margin: 0 auto;
+        background-image: url('../../images/bg-pattern-how-we-work-desktop.svg');
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 40px 60px;
     }
     #box .container .title {
         margin: 0;
+        width: 50%;
+        text-align: left;
+        font-size: 62px;
     }
 }
